# liscov

./: -  .gitignore  .gitleaks.toml  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  Makefile  README.md  build.rs  constitution.md  debug.toml  env.example  eslint.config.js  lefthook.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  stryker.config.json  svelte.config.js  vite.config.ts  vitest.config.ts
.cargo/: mutants.toml
.claude/: settings.json
.claude/hooks/: plan-guidelines.sh  session-rules.sh
.claude/skills/flake-hunt/: SKILL.md
.cursor/rules/: project-rules.mdc
.github/workflows/: ci.yml
crates/mock-server/: Cargo.toml
crates/mock-server/src/: main.rs
docs/: FEATURE_SPECIFICATION.md  SPECIFICATION_GUIDE.md
docs/api/: dioxus-webview-authentication.md  innertube-chat-mode.md  innertube-cookie-authentication.md  innertube-member-authentication.md  milestone-chat-analysis.md  websocket-api.md
docs/architecture/: README.md  architecture-summary.md  configuration-system.md  design-principles.md  entry-point-analysis.md  gui-architecture.md  signal-task-executor-scenarios.md  system-overview.md  window-management.md
docs/decisions/: 001_secure_storage.md  002_auth_indicator.md  003_spec_driven_testing.md  004_e2e_log_buffering.md  _TEMPLATE.md
docs/specs/: 01_auth.md  02_chat.md  03_websocket.md  04_tts.md  05_raw_response.md  06_viewer.md  07_revenue.md  08_database.md  09_config.md  10_window_state.md
e2e/: README.md  analytics-tab-freeze.spec.ts  app.spec.ts  auth-flow.spec.ts  auth.spec.ts  chat-basic.spec.ts  chat-message-types.spec.ts  chat-styling.spec.ts  chat-viewer-panel.spec.ts  chat.spec.ts  config.spec.ts  connection-state.spec.ts  font-size-persistence.spec.ts  member-only-chat.spec.ts  multi-stream.spec.ts  playwright.config.ts  raw-response.spec.ts  resume-logic-freeze.spec.ts  revenue.spec.ts  screenshot.spec.ts  settings-features.spec.ts  tauri-mock.ts  timestamp-timezone.spec.ts  tts-auto-launch.spec.ts  tts-first-comment-only-runtime.spec.ts  tts-first-comment-runtime.spec.ts  tts-first-comment.spec.ts  tts-priority-runtime.spec.ts  tts.spec.ts  viewer-data-flow.spec.ts  viewer-management.spec.ts  viewer.spec.ts  websocket.spec.ts  window-state.spec.ts
e2e-tauri/: README.md  analytics-tab-freeze.spec.ts  auth-flow.spec.ts  chat-basic.spec.ts  chat-display.spec.ts  chat-message-types.spec.ts  chat-styling.spec.ts  chat-viewer-panel.spec.ts  connection-state.spec.ts  font-size-persistence.spec.ts  member-only-chat.spec.ts  playwright.config.ts  resume-logic-freeze.spec.ts  timestamp-timezone.spec.ts  tts-auto-launch.spec.ts  viewer-data-flow.spec.ts  viewer-management.spec.ts  websocket.spec.ts  window-state.spec.ts
e2e-tauri/utils/: logger.ts  test-helpers.ts
e2e-tests/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e-tests/fixtures/: viewer_management_cleanup.sql  viewer_management_test_data.sql
e2e-tests/scripts/: check-dropdown.ts  run-viewer-management-test.ts  setup-test-db.ts
e2e-tests/tests/: app-launcher.ts  viewer-management.spec.ts
e2e/scripts/: build-for-e2e.ts
e2e/utils/: buffered-log-reporter.ts  fixtures.ts  logger.ts  test-helpers.ts  tts-mock-bouyomichan.ts
src/: api.rs  app.css  app.html  lib.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: connection.rs  errors.rs  lib.rs  paths.rs  state.rs
src-tauri/src/commands/: analytics.rs  auth.rs  auth_window.rs  chat.rs  config.rs  database.rs  mod.rs  raw_response.rs  tts.rs  viewer.rs  websocket.rs
src-tauri/src/core/: chat_runtime.rs  mod.rs  raw_response.rs
src-tauri/src/core/api/: auth.rs  continuation_builder.rs  innertube.rs  mod.rs  websocket.rs
src-tauri/src/core/api/innertube/: chat_parser.rs  client.rs  initial_data.rs  mod.rs
src-tauri/src/core/models/: chat.rs  mod.rs  youtube.rs
src-tauri/src/database/: crud.rs  mod.rs  models.rs  schema.sql
src-tauri/src/database/migrations/: 001_initial.sql  002_viewer_streams.sql  003_backfill_viewer_streams.sql  mod.rs
src-tauri/src/tts/: config.rs  mod.rs  process.rs
src-tauri/src/tts/backends/: bouyomichan.rs  mod.rs  voicevox.rs
src-tauri/tests/: analytics_commands.rs  auth_commands.rs  config_commands.rs  tts_commands.rs  websocket_api.rs
src-tauri/tests/common/: mod.rs
src/analytics/: data_exporter.rs  engagement_tracker.rs  integration_service.rs  mod.rs  revenue_analyzer.rs  trend_analyzer.rs
src/analytics/export/: csv_exporter.rs  excel_exporter.rs  json_exporter.rs  mod.rs  session_data.rs
src/api/: adapters.rs  continuation_builder.rs  generic.rs  innertube.rs  manager.rs  unified_client.rs  websocket_server.rs  youtube.rs
src/api/auth/: cookie_manager.rs  mod.rs  sapisidhash.rs  webview_auth.rs
src/api/innertube/: get_live_chat.rs
src/chat_management/: local_moderation.rs  message_classifier.rs  message_filter.rs  mod.rs  question_detector.rs  search_engine.rs
src/database/: crud.rs  mod.rs  models.rs  schema.rs  schema.sql
src/gui/: app_context.rs  auth_window.rs  blocking_processor.rs  closure_optimizer.rs  config_manager.rs  dom_controller.rs  live_chat_service.rs  memory_optimized.rs  message_processor.rs  message_stream.rs  mod.rs  models.rs  performance_monitor.rs  plugin_system.rs  resource_hooks.rs  services.rs  signal_manager.rs  signal_optimizer.rs  state_broadcaster.rs  state_management.rs  stream_end_detector.rs  system_messages.rs  timer_service.rs  traits.rs  tts_manager.rs  ui_sync_service.rs  unified_config.rs  utils.rs
src/gui/commands/: chat_commands.rs  mod.rs
src/gui/components/: auth_panel.rs  (+14 more)
src/io/: mod.rs  ndjson.rs  raw_response_saver.rs
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte
tests/: chat_mode_live_test.rs  chat_mode_messages_test.rs  freeze_detection_tests.rs  integration_tests.rs  long_running_stability_tests.rs  mod.rs  plugin_system_tests.rs  signal_optimization_tests.rs  ui_component_tests.rs
tests/data/: live_chat.ndjson
(+93 files in other folders)
