[package]
name = "liscov"
version = "0.1.0"
authors = ["Sifi Takashina <sifyfy@sifyfy.dev>"]
edition = "2021"
autobins = false                                 # 自動バイナリ検出を無効化

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "liscov"
path = "src/bin/liscov.rs"
doc = false

[[bin]]
name = "generate_test_data"
path = "src/bin/generate_test_data.rs"
doc = false

[dependencies]
# Dioxus 0.6.3 dependencies for migration
dioxus = { version = "0.6.3", features = ["signals", "desktop"] }
# dioxus-signals = "0.6.3" # 改良された状態管理 - dioxusのsignals機能で十分


anyhow = "1.0"
async-trait = "0.1"
derive_more = { version = "2.0.1", features = ["full"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "local-time",
] }
tracing-appender = "0.2" # ログファイル出力とローテーション
clap = { version = "4.0", features = ["derive"] } # CLI引数処理
glob = "0.3" # ログファイルのパターンマッチング
regex = "1.10"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = [
    "full",
    "rt-multi-thread",
    "macros",
    "signal",
    "tracing",
] }
tokio-stream = "0.1"
yup-oauth2 = "12.1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8" # For development mock data

# Database dependencies
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Excel export support
rust_xlsxwriter = "0.78"

# Chart library for graphs
dioxus-charts = "0.3"

# Web APIs for browser functionality
web-sys = { version = "0.3", features = ["Window"] }

# Native file dialogs
rfd = "0.15"

# WASM futures support
wasm-bindgen-futures = "0.4"

# デバッグ・開発用依存関係
toml = "0.8" # 設定ファイル読み込み用

# 設定ファイル管理
directories = "5.0" # XDGディレクトリサポート

# シグナルハンドリング
ctrlc = "3.4"


# 条件付きデバッグ依存関係（デバッグビルドのみ）
[dependencies.console-subscriber]
version = "0.2"
optional = true

[dependencies.tokio-console]
version = "0.1"
optional = true

[features]
default = []
# デバッグ機能
debug-tokio = ["tokio/tracing", "console-subscriber"]
debug-full = ["debug-tokio"]
# UI機能
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

# 開発用プロファイル
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# デバッグ情報付きリリースプロファイル
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
