[package]
name = "liscov-tauri"
version = "0.1.0"
description = "Liscov - YouTube Live Chat Monitor"
authors = ["Sifi Takashina <sifyfy@sifyfy.dev>"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
dirs = "6.0"
directories = "5.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
base64 = "0.22"
urlencoding = "2.1"
url = "2.5"

# Authentication
sha1 = "0.10"
hex = "0.4"
keyring = { version = "3", features = ["windows-native"] }

# Logging
log = "0.4"
tracing = "0.1"

# Config
toml = "0.8"

# TypeScript 型自動生成
ts-rs = { version = "10", features = ["serde-compat"] }
# Excel export
rust_xlsxwriter = "0.78"
tauri-plugin-dialog = "2.5.0"
rodio = "0.21.1"

[features]
default = []

# Release profile optimizations
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
