[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
warp = "0.3"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
